# near-plugins

./: .catalog-info.yaml  .gitignore  .release-plz.toml  Bos  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml  rust-toolchain
.config/: nextest.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: contract-analysis.yml  release-plz.yml  security-analysis.yml  (+1 more)
examples/: .catalog-info.yaml  Cargo.toml  build.sh
examples/access-controllable-examples/: README.md
examples/access-controllable-examples/access_control_role_base/: Cargo.toml
examples/access-controllable-examples/access_control_role_base/src/: lib.rs
examples/access-controllable-examples/access_controllable_base/: Cargo.toml  build.sh
examples/access-controllable-examples/access_controllable_base/src/: lib.rs
examples/access_control_role_base/: Cargo.toml
examples/access_controllable_base/: Cargo.toml  README.md
examples/access_controllable_base/src/: lib.rs
examples/full-access-key-fallback-examples/: README.md
examples/full-access-key-fallback-examples/full_access_key_fallback_base/: Cargo.toml  build.sh
examples/full-access-key-fallback-examples/full_access_key_fallback_base/src/: lib.rs
examples/full_access_key_fallback_base/: Cargo.toml  README.md
examples/full_access_key_fallback_base/src/: lib.rs
examples/near-plugins-test-utils/: Cargo.toml
examples/near-plugins-test-utils/src/: lib.rs
examples/ownable-examples/: README.md
examples/ownable-examples/ownable_base/: Cargo.toml  build.sh
examples/ownable-examples/ownable_base/src/: lib.rs
examples/ownable-examples/ownable_change_storage_key/: Cargo.toml  build.sh
examples/ownable-examples/ownable_change_storage_key/src/: lib.rs
examples/ownable-examples/ownable_cross_call/: Cargo.toml  build.sh
examples/ownable-examples/ownable_cross_call/src/: lib.rs
examples/ownable_base/: Cargo.toml  README.md
examples/ownable_base/src/: lib.rs
examples/ownable_change_storage_key/: Cargo.toml
examples/ownable_change_storage_key/src/: lib.rs
examples/ownable_cross_call/: Cargo.toml  build.sh
examples/ownable_cross_call/src/: lib.rs
examples/pausable-examples/: README.md
examples/pausable-examples/pausable_base/: Cargo.toml  build.sh
examples/pausable-examples/pausable_base/src/: lib.rs
examples/pausable_base/: Cargo.toml  README.md
examples/pausable_base/src/: lib.rs
examples/res/: access_controllable_base.wasm  full_access_key_fallback_base.wasm  ownable_base.wasm  ownable_change_storage_key.wasm  ownable_cross_call.wasm  pausable_base.wasm  upgradable_base.wasm  upgradable_base_second.wasm
examples/upgradable-examples/: README.md
examples/upgradable-examples/up_stage_code/: Cargo.toml
examples/upgradable-examples/up_stage_code/src/: main.rs
examples/upgradable-examples/upgradable_base/: Cargo.toml  build.sh
examples/upgradable-examples/upgradable_base/src/: lib.rs  up_stage_code.rs
examples/upgradable-examples/upgradable_base_second/: Cargo.toml
examples/upgradable-examples/upgradable_base_second/src/: lib.rs
examples/upgradable_base/: Cargo.toml  README.md
examples/upgradable_base/src/: lib.rs
examples/upgradable_base_second/: Cargo.toml
near-plugins/: .catalog-info.yaml  CHANGELOG.md  Cargo.toml
near-plugins-derive/: .catalog-info.yaml  CHANGELOG.md  Cargo.toml
near-plugins-derive/src/: access_control_role.rs  access_controllable.rs  full_access_key_fallback.rs  lib.rs  ownable.rs  pausable.rs  upgradable.rs  utils.rs
near-plugins-derive/tests/: access_controllable.rs  full_access_key_fallback.rs  ownable.rs  pausable.rs  pausable_migration.rs  upgradable.rs
near-plugins-derive/tests/common/: access_controllable_contract.rs  full_access_key_fallback_contract.rs  key.rs  mod.rs  ownable_contract.rs  pausable_contract.rs  repo.rs  upgradable_contract.rs  utils.rs
near-plugins-derive/tests/contracts/: README.md
near-plugins-derive/tests/contracts/access_controllable/: Cargo.toml  Makefile  rust-toolchain
near-plugins-derive/tests/contracts/access_controllable/src/: lib.rs
near-plugins-derive/tests/contracts/full_access_key_fallback/: Cargo.toml
near-plugins-derive/tests/contracts/full_access_key_fallback/src/: lib.rs
near-plugins-derive/tests/contracts/ownable/: Cargo.toml  rust-toolchain
near-plugins-derive/tests/contracts/ownable/src/: lib.rs
near-plugins-derive/tests/contracts/pausable/: Cargo.toml
near-plugins-derive/tests/contracts/pausable/src/: lib.rs
near-plugins-derive/tests/contracts/pausable_new/: Cargo.toml
near-plugins-derive/tests/contracts/pausable_new/src/: lib.rs
near-plugins-derive/tests/contracts/pausable_old/: Cargo.toml  rust-toolchain
near-plugins-derive/tests/contracts/pausable_old/src/: lib.rs
near-plugins-derive/tests/contracts/upgradable/: Cargo.toml  rust-toolchain
near-plugins-derive/tests/contracts/upgradable/src/: lib.rs
near-plugins-derive/tests/contracts/upgradable_2/: Cargo.toml  rust-toolchain
near-plugins-derive/tests/contracts/upgradable_2/src/: lib.rs
near-plugins-derive/tests/contracts/upgradable_state_migration/: Cargo.toml  rust-toolchain
near-plugins-derive/tests/contracts/upgradable_state_migration/src/: lib.rs
near-plugins-derive/tests/data/: access_controllable_v_0_2_0.wasm
near-plugins/src/: access_control_role.rs  access_controllable.rs  events.rs  full_access_key_fallback.rs  lib.rs  ownable.rs  pausable.rs  test_utils.rs  upgradable.rs
near-plugins/tests/: access_controllable.rs  full_access_key_fallback.rs  ownable.rs  pausable.rs  upgradable.rs
near-plugins/tests/common/: access_controllable_contract.rs  mod.rs  ownable_contract.rs  pausable_contract.rs  repo.rs  upgradable_contract.rs  utils.rs
near-plugins/tests/contracts/: README.md
near-plugins/tests/contracts/access_controllable/: Cargo.toml
near-plugins/tests/contracts/access_controllable/src/: lib.rs
near-plugins/tests/contracts/pausable/: Makefile
near-plugins/tests/contracts/pausable/src/: lib.rs
near-plugins/tests/contracts/upgradable/src/: lib.rs
scripts/: fix_dependencies.sh
(+1 files in other folders)
