[workspace]
members = ["near-plugins", "near-plugins-derive"]
exclude = ["target", "examples"]
resolver = "2"

[workspace.metadata.workspaces]
version = "0.15.0"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Aurora Labs <hello@aurora.dev>"]
# An update of the MSRV requires updating:
# - `rust-toolchain` files in `near-plugins-derive/tests/contracts/**`
# - the toolchain installed in CI via the `toolchain` parameter of `actions-rs/toolchain@v1`
rust-version = "1.76.0"
description = "Ergonomic plugin system to extend NEAR contracts."
license = "CC0-1.0"
readme = "README.md"
repository = "https://github.com/aurora-is-near/near-plugins"
homepage = "https://github.com/aurora-is-near/near-plugins"
keywords = ["near", "smart contract", "plugin"]

[workspace.dependencies]
bitflags = "1.3"
near-sdk = "5.2"
near-plugins = { path = "near-plugins" }
near-plugins-derive = { path = "near-plugins-derive" }
serde = "1"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
near-workspaces = "0.11"
toml = "0.8"
darling = "0.13.1"
proc-macro2 = "1.0"
quote = "1.0.9"
syn = { version = "1.0.69", features = ["full"] }
proc-macro-crate = "0.1.5"

[workspace.lints.clippy]
all = "deny"
nursery = "deny"
pedantic = "deny"

module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
