[workspace]
members = [
    "near-plugins",
    "near-plugins-derive",
    "near-plugins-derive/tests/contracts/access_controllable",
    "near-plugins-derive/tests/contracts/ownable",
    "near-plugins-derive/tests/contracts/pausable",
    "near-plugins-derive/tests/contracts/pausable_new",
    "near-plugins-derive/tests/contracts/pausable_old",
    "near-plugins-derive/tests/contracts/upgradable",
    "near-plugins-derive/tests/contracts/upgradable_2",
    "near-plugins-derive/tests/contracts/upgradable_state_migration",
]
resolver = "3"

[workspace.metadata.workspaces]
version = "0.15.0"

[workspace.package]
version = "0.5.0"
edition = "2024"
authors = ["Aurora Labs <hello@aurora.dev>"]
rust-version = "1.86.0"
description = "Ergonomic plugin system to extend NEAR contracts."
license = "CC0-1.0"
readme = "README.md"
repository = "https://github.com/aurora-is-near/near-plugins"
homepage = "https://github.com/aurora-is-near/near-plugins"
keywords = ["near", "smart contract", "plugin"]

[workspace.dependencies]
bitflags = "1.3"
near-sdk = "5.25"
near-plugins = { path = "near-plugins" }
near-plugins-derive = { path = "near-plugins-derive" }
serde = "1"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
near-workspaces = "0.22"
toml = "0.8"
# XXX: Darling 0.21 uses rustc 1.87, which is not supported by the sdk before wasmtime rollout
darling = ">=0.20, <0.21"
proc-macro2 = "1.0"
quote = "1.0.9"
syn = { version = "2", features = ["full"] }
proc-macro-crate = "0.1.5"
cargo-near-build = { version = "0.11", features = ["build_internal"] }

# Optimization settings for wasm contract builds (used by cargo_near_build in release mode)
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
