[workspace]
members = ["near-plugins", "near-plugins-derive"]
exclude = ["target", "examples"]
resolver = "3"

[workspace.metadata.workspaces]
version = "0.15.0"

[workspace.package]
version = "0.5.1"
edition = "2024"
authors = ["Aurora Labs <hello@aurora.dev>"]
# An update of the MSRV requires updating:
# - `rust-toolchain` files in `near-plugins-derive/tests/contracts/**`
# - the toolchain installed in CI via the `toolchain` parameter of `actions-rs/toolchain@v1`
rust-version = "1.86.0"
description = "Ergonomic plugin system to extend NEAR contracts."
license = "CC0-1.0"
readme = "README.md"
repository = "https://github.com/Near-One/near-plugins"
homepage = "https://github.com/Near-One/near-plugins"
keywords = ["near", "smart contract", "plugin"]

[workspace.dependencies]
bitflags = "1.3"
near-sdk = "5.2"
near-plugins = { path = "near-plugins" }
near-plugins-derive = { path = "near-plugins-derive" }
serde = "1"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
near-workspaces = "0.22"
toml = "0.8"
# XXX: Darling 0.21 uses rustc 1.87, which is not supported by the sdk before wasmtime rollout
darling = ">=0.20, <0.21"
proc-macro2 = "1.0"
quote = "1.0.9"
syn = { version = "2", features = ["full"] }
proc-macro-crate = "0.1.5"
cargo-near-build = { version = "0.11", features = ["build_internal"] }
