[package]
name = "near-plugins-derive"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
darling.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
proc-macro-crate.workspace = true

[dev-dependencies]
anyhow.workspace = true
near-plugins = { path = "../near-plugins/", version = "0.5.2" }
near-sdk = { workspace = true, features = ["unit-testing"] }
tokio.workspace = true
near-workspaces.workspace = true
toml.workspace = true
cargo-near-build.workspace = true
