[package]
name = "near-plugins"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitflags.workspace = true
near-sdk.workspace = true
near-plugins-derive.workspace = true
serde.workspace = true

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }

[lints]
workspace = true
