[package]
name = "access_control_role_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-plugins = { path = "../../../near-plugins" }
near-plugins-derive = { path = "../../../near-plugins-derive" }
bitflags = "1.3.2"
borsh = "*"
near-sdk = "4.0.0"