[package]
name = "up_stage_code"
version = "0.1.0"
edition = "2021"

[dependencies]
near-sdk = "4.0.0"
near-plugins = { path = "../../../near-plugins" }
near-plugins-derive = { path = "../../../near-plugins-derive" }
borsh = "0.9.3"
near-primitives = { version = "0.14.0" }
workspaces = "0.6"
tokio = { version = "1.1", features = ["rt", "macros"] }
serde_json = "1.0.74"
near-plugins-test-utils = { path = "../../near-plugins-test-utils" }
